# solarbitrage

./: README.md  testing.txt
backend/: .gitignore  package-lock.json  package.json
backend/bot/: .env  .gitignore  Dockerfile  Procfile  package-lock.json  package.json  tsconfig.json
backend/data_collection/: .env  .gitignore  package-lock.json  package.json  tsconfig.json
backend/on-chain/: Anchor.toml  Cargo.toml
backend/on-chain/data-collection/: Cargo.toml  package-lock.json  package.json  tsconfig.json
backend/on-chain/data-collection/client/: client.ts  hello_world.ts  utils.ts
backend/on-chain/data-collection/src/: error.rs  instruction.rs  processor.rs
backend/on-chain/programs/on-chain/: Cargo.toml
backend/on-chain/programs/on-chain/src/: lib.rs
backend/on-chain/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs
backend/on-chain/tests/: on-chain.ts
backend/on-chain/trading-bot/: package-lock.json  package.json
backend/on-chain/trading-bot/app/: app.js  app.ts  program_pub.json  solarbitrage.js  solarbitrage.ts  utils.ts
backend/on-chain/trading-bot/src/: dump.rs  error.rs  instruction.rs  lib.rs  processor.rs
common/: .env
common/src/: config.ts  connection.ts  fetch-timeout.ts
frontend/: .firebaserc  .gitignore  package-lock.json  package.json
frontend/.firebase/: hosting.YnVpbGQ.cache
frontend/public/: index.html
frontend/src/: App.css  App.js  firestore.config.js
monitoring/: .gitignore  package-lock.json  package.json  tsconfig.json
monitoring/public/: index.html
monitoring/src/: app.ts  pm2Lib.ts  (+1 more)
orca-rate-logger/on-chain/: .gitignore  Cargo.toml
orca-rate-logger/on-chain/src/: processor.rs
(+50 files in other folders)
