[package]
name = "orca-rate-logger"
version = "1.0.0"
description = "Given input/output token accounts, print the account info data as base58 into log buffer"
authors = ["Solarbitrage"]
repository = "https://github.tamu.edu/solarbitrage/solarbitrage"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.10.10"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "1.10.10"
solana-sdk = "1.10.10"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
